# sluver

./: .gitignore  .oxlintrc.json  AGENTS.md  CONTEXT.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
docs/adr/: 0001-two-database-design.md  0002-character-ref-composite-pk.md  0003-trigger-event-vs-character-refs-independence.md  0004-world-isolation.md  0005-workspace-shell-layout.md  0006-deletion-cascade-to-character-refs.md  0007-novel-workspace-layout.md  0007-participant-picker-two-panel-layout.md  0007-three-database-design.md  0008-space-password-is-auth-gate.md  0009-workspace-shell-three-tier-and-titlebar-tabs.md  0010-tab-state-keepalive.md  0011-one-space-per-window.md  0012-space-scoped-ai-config.md  0013-api-key-plaintext-storage.md
docs/pi-agent/: 第10章-会话管理-对话的存储恢复与分叉.md  第1章-开篇-Pi-Agent框架总览.md  第2章-三层架构-Pi-Agent项目的骨骼.md  第3章-Agent-Loop-让模型转动起来的引擎.md  第4章-模型调用-一行代码驾驭多个模型.md  第5章-工具系统-Agent的手脚是怎么被管住的.md  第6章-消息系统-Agent的记忆如何组织与传递.md  第7章-事件驱动-Agent的神经系统.md  第8章-上下文工程-让有限窗口装下无限对话.md  第9章-上下文压缩-当对话太长怎么办.md
docs/versions/: v0.1.0.md
src/: App.tsx  index.css  main.tsx  router.ts
src-tauri/: Cargo.toml  tauri.conf.json  tauri.macos.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  tray.rs  util.rs  window_manager.rs
src-tauri/src/commands/: ai.rs  character.rs  element.rs  event.rs  mod.rs  novel.rs  session.rs  setting.rs  space.rs  tray.rs  window.rs  world.rs
src-tauri/src/db/: error.rs  manager.rs  migrations.rs  mod.rs
src-tauri/src/models/: agent.rs  catalog.rs  character.rs  config.rs  event.rs  item.rs  location.rs  lore.rs  mod.rs  novel.rs  provider_credential.rs  ref_counts.rs  setting.rs  space.rs  world.rs
src-tauri/src/util/: password.rs
src/api/: ai.ts  character.ts  client.ts  element.ts  event.ts  index.ts  novel.ts  session.ts  setting.ts  space.ts  types.ts  world.ts
src/components/: app-sidebar.tsx  keep-alive-outlet.tsx  settings-dialog.tsx  space-management.tsx  space-password-gate.tsx  space-picker.tsx  tab-state-provider.tsx  title-bar.tsx  window-title-bar.tsx  world-sidebar.tsx
src/hooks/: index.ts  use-ai.ts  use-characters.ts  use-events.ts  use-items.ts  use-locations.ts  use-lore.ts  use-novels.ts  use-session.ts  use-spaces.ts  use-worlds.ts
src/i18n/: errors.ts  index.ts
src/lib/: format.ts  theme.ts
(+129 files in other folders)
