[package]
name = "sluver"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "sluver_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Pinned to ^2.11 to unlock `data-tauri-drag-region="deep"` (propagates window
# drag to non-interactive descendants) used by the TitleBar Space tabs (ADR-0009).
# `tray-icon` is a NON-DEFAULT feature and must stay explicit (ADR-0008 tray re-lock).
tauri = { version = "2.11", features = ["tray-icon"] }
# argon2id password hashing (ADR-0008: auth-gate only, NOT at-rest encryption).
# Default features include `password-hash`, `alloc`, and `rand` — no flags needed.
# NOTE: argon2 0.5 pulls `password-hash` WITHOUT its `getrandom` feature, so
# `argon2::password_hash::rand_core::OsRng` (needed by `SaltString::generate`)
# is unreachable out of the box. Adding `password-hash` here with `getrandom`
# turns that feature on via cargo feature unification — no extra crate is
# introduced (`password-hash` is already a transitive dep of argon2).
argon2 = "0.5"
password-hash = { version = "0.5", features = ["getrandom"] }
tauri-plugin-opener = "2"
tauri-plugin-os = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-decorum = "1"
rusqlite = { version = "0.40.1", features = ["bundled"] }
rusqlite_migration = "2.5.0"
uuid = { version = "1.23.4", features = ["v7"] }
chrono = "0.4.45"
thiserror = "2.0.18"
# Async HTTP client for models.dev catalog fetch (ADR-0012). rustls-tls avoids
# a Windows OpenSSL dependency; `default-features = false` drops native-tls.
# NO `blocking` feature — catalog commands are async (see commands/ai.rs).
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

[dev-dependencies]
# Filesystem isolation for DbManager / command integration tests (T10 stress test).
tempfile = "3"

